# wgpu-compute-render-template

./: Cargo.toml  LICENSE.txt  README.md
.cargo/: config.toml
shaders/: raycast_compute.wgsl  raycast_render.wgsl
src/: compute_pipeline.rs  context.rs  event_loop.rs  main.rs  render_pipeline.rs
